--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     <h1 class="title"><span>Перейди дорогу</span>Стань легендой</h1>
     <p class="subtitle">Простой старт. Быстрая реакция. Бесконечный путь.</p>
     <div class="ctas">
-      <a href="https://beef-way-two.com/c2feea520" class="btn btn-glass magnet">
+      <a href="https://martin-way-six.com/c0b5e0f74" class="btn btn-glass magnet">
         <img class="i" src="images/www.png" alt=""> Скачать игру
       </a>
       <a href="https://t.me/chickenroadmobile" class="btn btn-tg magnet">
@@ -498,7 +498,7 @@
       </p>
       <div class="inlineCTA">
         <span class="plane-wrap">
-          <a href="https://beef-way-two.com/c2feea520" class="btn btn-glass magnet" style="min-width:300px;">
+          <a href="https://martin-way-six.com/c0b5e0f74" class="btn btn-glass magnet" style="min-width:300px;">
             <img class="i" src="images/www.png" alt=""> Скачать игру
           </a>
           <img src="images/plane.png" alt="Самолёт" class="plane-near-button">
@@ -723,7 +723,7 @@
     <img class="promo-plane" src="images/plane.png" alt=""/>
     <h3 class="promo-title">Поздравляем!</h3>
     <p class="promo-text">Забирай <strong>20 бесплатных полётов</strong></p>
-    <a href="https://beef-way-two.com/c2feea520" class="promo-cta" id="promoCta">Забрать</a>
+    <a href="https://martin-way-six.com/c0b5e0f74" class="promo-cta" id="promoCta">Забрать</a>
   </div>
 </div>
 
